--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">imcapplication</string>
+    <string name="hello_world_small">Hello World!!!!</string>
+    <string name="hi_radiobuton">Olá, RadioButon</string>
+    <string name="hi_checkbox">Olá, CheckBox</string>
 </resources>
